Updated dict presentation

--- a/01_intro/Dictionaries.ipynb
+++ b/01_intro/Dictionaries.ipynb
@@ -1,25 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.4.5 (default, Jul 26 2017, 17:38:06) \n",
-      "[GCC 5.4.0]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import sys\n",
-    "print(sys.version)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -34,14 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Larry': 35, 'Mike': 29, 'Moe': 23}\n"
+      "{'Moe': 23, 'Larry': 35, 'Mike': 29}\n"
      ]
     }
    ],
@@ -91,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -115,8 +96,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ages['Mike'] = 30"
@@ -124,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -160,14 +143,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Mike': 30, 'Moe': 23}\n"
+      "{'Moe': 23, 'Mike': 30}\n"
      ]
     }
    ],
@@ -186,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -224,15 +207,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mike 30\n",
-      "Moe 23\n"
+      "Moe 23\n",
+      "Mike 30\n"
      ]
     }
    ],
@@ -251,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -259,9 +242,9 @@
      "evalue": "'Zoe'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-24-5502792c663a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mages\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Zoe'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31m----------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m           Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-5502792c663a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mages\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Zoe'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mKeyError\u001b[0m: 'Zoe'"
      ]
     }
@@ -272,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +264,7 @@
        "0"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -310,7 +293,7 @@
        "30"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,20 +311,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Mike', 'Moe']\n"
+      "['Moe', 'Mike']\n"
      ]
     }
    ],
    "source": [
     "keys = list(ages)\n",
     "print(keys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['Moe', 'Mike'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ages.keys())  # Ugly"
    ]
   },
   {
@@ -355,21 +355,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mike\n",
-      "Moe\n"
+      "Moe\n",
+      "Mike\n"
      ]
     }
    ],
    "source": [
     "for name in ages:\n",
     "    print(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "for age in ages.values():\n",
+    "    print(age)"
    ]
   },
   {
@@ -383,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -457,23 +478,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
+   "execution_count": 31,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "ename": "TypeError",
      "evalue": "'tuple' object does not support item assignment",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-34-71b8ae05f2fb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31m----------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m          Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-31-71b8ae05f2fb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
      ]
     }
    ],
    "source": [
     "a[0] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{(1, 2, 3): 'Hello'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_dict = {\n",
+    "   (1, 2, 3): 'Hello'\n",
+    "}\n",
+    "print(test_dict)"
    ]
   },
   {
@@ -485,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -499,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -512,6 +555,132 @@
    ],
    "source": [
     "print(maxmin([1, 3 ,4, 2, 7, 4]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a, b = maxmin([1, 2, 3, 4, 5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a, b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Studio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def gpacalc(grades):\n",
+    "    \"\"\"Given a list of grade dicts, return the weighted GPA\n",
+    "        grade -> {\"grade\": 3.5, \"credits\": 3}\n",
+    "    \n",
+    "        (sum W_i * V_i) / sum W_i\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    weighted_sum = 0\n",
+    "    credits_sum = 0\n",
+    "    for grade_dict in grades:\n",
+    "        grade = grade_dict['grade']\n",
+    "        credits = grade_dict['credits']\n",
+    "        weighted_sum += grade * credits\n",
+    "        credits_sum += credits\n",
+    "    return weighted_sum / credits_sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    # Get grades and credits\n",
+    "    grades = []\n",
+    "    while True:\n",
+    "        raw_grade = input('What is the Grade (0.0 - 4.0): ')\n",
+    "        raw_credits = input('How many credits: ')\n",
+    "        grades.append({\n",
+    "            \"grade\": float(raw_grade),\n",
+    "            \"credits\": int(raw_credits),\n",
+    "        })\n",
+    "        if input('Add more? (y/n): ') != 'y':\n",
+    "            break\n",
+    "        \n",
+    "    # Print GPA\n",
+    "    print(gpacalc(grades))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is the Grade (0.0 - 4.0): 3.5\n",
+      "How many credits: 4\n",
+      "Add more? (y/n): y\n",
+      "What is the Grade (0.0 - 4.0): 0\n",
+      "How many credits: 5\n",
+      "Add more? (y/n): n\n",
+      "1.5555555555555556\n"
+     ]
+    }
+   ],
+   "source": [
+    "main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2, 3)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tuple([1,2, 3])"
    ]
   },
   {
