--- a/01_intro/Classes.ipynb
+++ b/01_intro/Classes.ipynb
@@ -230,6 +230,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "builtin_function_or_method"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(math.acos)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -276,18 +307,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "odie = Dog('Odie', '...', 3)"
+    "pooch = Dog('Odie', '...', 3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +330,24 @@
     }
    ],
    "source": [
-    "print(repr(odie))"
+    "print(repr(pooch))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Odie\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(str(pooch))"
    ]
   },
   {
@@ -307,6 +355,142 @@
    "metadata": {},
    "source": [
     "# Studio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import fractions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/usr/lib64/python3.4/fractions.py'"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fractions.__file__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def gcd(a, b):\n",
+    "    \"\"\"Return the common divisor for a and b\"\"\"\n",
+    "    if a == 0:\n",
+    "        return b\n",
+    "    if b == 0:\n",
+    "        return a\n",
+    "    \n",
+    "    return gcd(b % a, a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gcd(16, 32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class Fraction:\n",
+    "    def __init__(self, num, dom):\n",
+    "        self.n = num\n",
+    "        self.d = dom\n",
+    "        self.simplify()\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return '{}/{}'.format(self.n, self.d)\n",
+    "    \n",
+    "    def add(self, other):\n",
+    "        \"\"\"Adds self and other and returns a new fraction\"\"\"\n",
+    "        new_d = self.d * other.d\n",
+    "        new_n = self.n * other.d + other.n * self.d\n",
+    "        return Fraction(new_n, new_d)\n",
+    "    \n",
+    "    def __add__(self, other):\n",
+    "        return self.add(other)\n",
+    "    \n",
+    "    def mult(self, other):\n",
+    "        \"\"\"Multiply two fractions\"\"\"\n",
+    "        return Fraction(self.n * other.n, self.d * other.d)\n",
+    "    \n",
+    "    def __mul__(self, other):\n",
+    "        return self.mult(other)\n",
+    "    \n",
+    "    def simplify(self):\n",
+    "        \"\"\"Simplifies this fraction in-place\"\"\"\n",
+    "        div = gcd(self.n, self.d)\n",
+    "        self.n = self.n // div\n",
+    "        self.d //= div"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "ex_1 = Fraction(1, 2)\n",
+    "ex_2 = Fraction(3, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5/4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ex_1 + ex_2)"
    ]
   },
   {
